--- a/Draw/Controller/Feed/FeedDetailController.xib
+++ b/Draw/Controller/Feed/FeedDetailController.xib
@@ -122,11 +122,11 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">back@2x.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="869397713">
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="720125645">
+						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
@@ -192,6 +192,7 @@
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
+						<int key="IBUISeparatorStyle">1</int>
 						<reference key="IBUISeparatorColor" ref="626117830"/>
 						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
@@ -336,11 +337,11 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">green_button@2x.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="507658296">
 							<int key="type">2</int>
 							<double key="pointSize">14</double>
 						</object>
-						<object class="NSFont" key="IBUIFont">
+						<object class="NSFont" key="IBUIFont" id="379394219">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
@@ -356,7 +357,7 @@
 								<string key="NSFrameSize">{320, 41}</string>
 								<reference key="NSSuperview" ref="314067473"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="71766677"/>
+								<reference key="NSNextKeyView" ref="844526894"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUIImage" ref="440761270"/>
@@ -367,6 +368,7 @@
 								<string key="NSFrame">{{244, 2}, {70, 32}}</string>
 								<reference key="NSSuperview" ref="314067473"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -380,8 +382,8 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">orange_button@2x.png</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="869397713"/>
-								<reference key="IBUIFont" ref="720125645"/>
+								<reference key="IBUIFontDescription" ref="507658296"/>
+								<reference key="IBUIFont" ref="379394219"/>
 							</object>
 							<object class="IBUIImageView" id="844526894">
 								<reference key="NSNextResponder" ref="314067473"/>
@@ -389,6 +391,7 @@
 								<string key="NSFrame">{{6, 2}, {230, 32}}</string>
 								<reference key="NSSuperview" ref="314067473"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="71766677"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
