--- a/Draw/Controller/Feed/FeedDetailController~ipad.xib
+++ b/Draw/Controller/Feed/FeedDetailController~ipad.xib
@@ -44,6 +44,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="555051130"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,6 +58,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrameSize">{768, 916}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="163844663"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -70,6 +72,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{151, 64}, {465, 87}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="866958469"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -83,6 +86,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrameSize">{768, 108}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="27418821"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -96,6 +100,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{12, 10}, {88, 76}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="146667255"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -132,6 +137,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{120, 0}, {528, 108}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="618456716"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -167,6 +173,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{24, 445}, {720, 2}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="824189244"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="771537453">
 							<int key="NSColorSpace">3</int>
@@ -179,11 +186,13 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{24, 445}, {720, 425}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="200727363"/>
 						<reference key="IBUIBackgroundColor" ref="75250085"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
+						<int key="IBUISeparatorStyle">1</int>
 						<reference key="IBUISeparatorColor" ref="771537453"/>
 						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
@@ -196,6 +205,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{48, 449}, {672, 130}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="845434084"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="870777980">
 							<int key="NSColorSpace">3</int>
@@ -233,6 +243,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{660, 10}, {84, 76}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="218208994"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -242,6 +253,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{518, 331}, {230, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="400890904"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -271,6 +283,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{103, 395}, {307, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="527899610"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -301,6 +314,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{518, 257}, {163, 56}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="444596871"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -342,6 +356,7 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrameSize">{768, 91}</string>
 								<reference key="NSSuperview" ref="845434084"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1067315516"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -352,7 +367,7 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{585, 3}, {168, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -381,6 +396,7 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{14, 3}, {552, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="176616936"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -390,6 +406,7 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{14, 4}, {552, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1020020007"/>
 								<reference key="IBUIBackgroundColor" ref="870777980"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -408,6 +425,7 @@
 						</array>
 						<string key="NSFrame">{{0, 913}, {768, 89}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1029985620"/>
 						<reference key="IBUIBackgroundColor" ref="870777980"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -417,6 +435,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{36, 395}, {100, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="807744600"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -439,6 +458,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{271, 158}, {228, 217}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="524276966"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -452,6 +472,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{271, 158}, {228, 217}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="554680063"/>
 						<reference key="IBUIBackgroundColor" ref="870777980"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -477,6 +498,7 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="819923111"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -861,7 +883,151 @@
 			<nil key="sourceID"/>
 			<int key="maxID">172</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">FeedDetailController</string>
+					<string key="superclassName">PPTableViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="clickActionButton:">id</string>
+						<string key="clickBackButton:">id</string>
+						<string key="clickSendButton:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="clickActionButton:">
+							<string key="name">clickActionButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickBackButton:">
+							<string key="name">clickBackButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickSendButton:">
+							<string key="name">clickSendButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="actionButton">UIButton</string>
+						<string key="commentInput">UITextView</string>
+						<string key="commentLabel">UILabel</string>
+						<string key="drawView">ShowDrawView</string>
+						<string key="followButton">UIButton</string>
+						<string key="guessStatLabel">UILabel</string>
+						<string key="inputBackground">UIImageView</string>
+						<string key="inputBackgroundView">UIView</string>
+						<string key="nickNameLabel">UILabel</string>
+						<string key="noCommentTipsLabel">UILabel</string>
+						<string key="paperImage">UIImageView</string>
+						<string key="replayButton">UIButton</string>
+						<string key="sendButton">UIButton</string>
+						<string key="timeLabel">UILabel</string>
+						<string key="titleLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="actionButton">
+							<string key="name">actionButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="commentInput">
+							<string key="name">commentInput</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="commentLabel">
+							<string key="name">commentLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="drawView">
+							<string key="name">drawView</string>
+							<string key="candidateClassName">ShowDrawView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="followButton">
+							<string key="name">followButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="guessStatLabel">
+							<string key="name">guessStatLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputBackground">
+							<string key="name">inputBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputBackgroundView">
+							<string key="name">inputBackgroundView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nickNameLabel">
+							<string key="name">nickNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="noCommentTipsLabel">
+							<string key="name">noCommentTipsLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="paperImage">
+							<string key="name">paperImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="replayButton">
+							<string key="name">replayButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="sendButton">
+							<string key="name">sendButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="timeLabel">
+							<string key="name">timeLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FeedDetailController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PPTableViewController</string>
+					<string key="superclassName">PPViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">dataTableView</string>
+						<string key="NS.object.0">UITableView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">dataTableView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">dataTableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPTableViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ShowDrawView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShowDrawView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
